--- a/samples/WebServerOAuthFlow/WebServerOAuthFlow.Web/Web.config
+++ b/samples/WebServerOAuthFlow/WebServerOAuthFlow.Web/Web.config
@@ -9,15 +9,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <add key="AuthorizationEndpointUrl" value="https://login.salesforce.com/services/oauth2/authorize" />
     <add key="TokenRequestEndpointUrl" value="https://login.salesforce.com/services/oauth2/token" />
     <add key="ConsumerKey" value="" />
     <add key="ConsumerSecret" value="" />
-    <add key="CallbackUrl" value="http://localhost:6054/api/callback" />
+    <add key="CallbackUrl" value="http://localhost:8080/api/callback" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
